--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -20,6 +20,22 @@ jobs:
     name: Build and test
     runs-on: ubuntu-22.04
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+    env:
+      MIX_ENV: test
+
     steps:
     - uses: actions/checkout@v4
     - name: Set up Elixir
@@ -35,5 +51,7 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Check formatting
+      run: mix format --check-formatted
     - name: Run tests
       run: mix test
