--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -24,7 +24,9 @@ jobs:
       postgres:
         image: postgres:15
         env:
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: website_test
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
