--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -37,6 +37,7 @@ jobs:
 
     env:
       MIX_ENV: test
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/website_test
 
     steps:
     - uses: actions/checkout@v4
